Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -13,6 +13,21 @@
 # 工具篇
 
 
+## 2017-08-21  罗伯特议事规则：如何用“十二原则六步法”开好一个会
+为了最高效地获取会议的结论价值，你可以试试罗伯特议事规则。这套规则非常详细，但我希望你记住最精华的十二原则六步法。
+十二原则是：动议中心，主持中立，机会均等，立场明确，发言完整，面对主持，限时限次，一时一件，遵守裁判，文明表达，充分辩论，和多数裁决。
+六步法是：动议，附议，陈述议题，辩论，表决，宣布结果。
+
+
+## 2017-08-13  头脑风暴：用数量带动质量，用点子激发点子
+头脑风暴法，就是用严谨的流程，“自由思考、延迟批判、以量求质、结合改善”，把所有智慧的子集“连接”起来，“激发”新的想法，产生一群人独自苦思冥想无法产生的创新。
+
+
+## 2017-08-06  OKR：KPI是秒表，OKR是指南针
+KPI 是秒表，OKR 是指南针。
+指南针最重要的作用，是让一个无法用数字考核的团队，比如谷歌的工程师团队，通过层层分解的目标、关键任务，向同一个方向前行。
+
+
 ## 2017-07-31  德尔菲法：70年前发明的高科技：人脑云计算
 概念：德尔菲法
 德尔菲法是一种预测方法，它是在20世纪40年代由O.赫尔姆和N.达尔克首创，经过T.J.戈尔登和兰德公司进一步发展而成的。
