--- a/note/...column_世界名刊速读.md
+++ b/note/...column_世界名刊速读.md
@@ -5,6 +5,10 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-08-17  《鹦鹉螺》| 训练情绪粒度，提升情商
+情商，就是你感知别人和自己情绪的能力。
+
+
 ## 2017-07-24  《1843》| 为什么人在网上更自恋？
 character 强调的是，一个人面对生活中重大问题时态度，所以电影、小说里的角色都叫 character，因为故事就是角色对于不同问题的选择。
 personality 指的是，一个人在为人处事方面与众不同、让人印象深刻的特质。
