--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,10 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-09-04  讲故事的信
+特性是每个人个性中最难且无法控制的部分，它会自然流露在走路、吃饭、讲话、工作和每天的生活中，也会将你的天赋引往不同的方向发展。
+
+
 ## 2017-07-16  推动摇篮的手在统治世界
 故事：珍·古道尔博士，世界动物保育学家
 珍的妈妈在她的回忆录里，写到珍出生后，医生对她说的话：“这将是非常具有挑战性的试验，你会了解自己必须为另一个生命负责。而她的发展将有很大部分取决于你对她的回应。别忘了那句话：推动摇篮的手在统治世界。至少，也塑造了这个世界的未来。”这是所有做父母的人都该牢记的道理。
