--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,25 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-08-29  犹太人的教育方式 Chavrusa 和苏格拉底对勇气的看法
+Chavrusa 一词的希伯来语原意是伙伴（companionship)，后来指拉比犹太教学习经典的特定方法。使用这种方法时，两个人一起研读经典，然后开始辩论，看谁能够辩论赢。
+在辩论中，观点不重要，重要的是逻辑。哪个人能提出更符合逻辑的结论，并且用更强的逻辑性证明它，哪个人就赢了。
+Chavrusa 中最关键的两点是提问和逻辑。每个人都可以不断质疑对方的观点，这是通过提问完成的。我们在获得知识，特别是新知的时候，提出好的问题比解决问题更重要。
+能提出问题不仅说明自己对主题有所了解，而且能帮助自己养成一种对这种现象和观点保持独立思考的能力。
+
+苏格拉底说，他也说不清，但是，他认为勇气是去做合理的事情，不论危险与否
+
+
+## 2017-08-23  比穷更可怕的是什么？
+缺钱可能会在短期内物质条件差一点，但是并不影响父母在见识、爱和规矩上培养好孩子，有了意识，做到这些事并不难。
+反之，家里有钱，孩子也不会一定就有见识，有爱心，守规矩。
+
+
+## 2017-08-21  大富靠命，小富靠运
+对 Z 君来讲，如果他惦记着去挣小米这种钱，就失去了他固有的看问题的方法，最后就挣不到 Google 或者腾讯这种钱了。
+Z 君非常认命，对那些不属于自己的东西，从来没有非分之想。
+
+
 ## 2017-07-25  对话班超：勇气和智慧
 苏轼在《留侯论》中讲 “匹夫见辱，拔剑而起，挺身而斗，此不足为勇也。天下有大勇者，卒然临之而不惊，无故加之而不怒”。
 所谓勇敢应该是不怕危险和困难，果敢行动，办成别人不能干也不敢干的事情。
