--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,11 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-08-02  进取者的工作作风
+想要达到心流状态，需要这个工作的难度和你的技能正好配得上。 
+技能低工作难，你就会焦虑；技能高工作简单，你就会无聊。心流是工作难度稍微比你的技能高一点点，你历经一番忘我的挣扎把它完成。
+
+
 ## 2017-07-27  礼崩乐坏文化战
 你把原本上层社会的东西给故意平民化处理一下，往往能赚到很多钱。
 比如在家里煮纯正的咖啡，比较麻烦，原本算是高级的享受。
@@ -56,6 +61,8 @@
 
 
 ## 2017-07-06  怎样 “不” 集中注意力
+注意力是一种有限的资源，你要是不擅长不集中注意力，你就不擅长集中注意力。
+
 注意力需要“养”。这使我想起古人说的所谓“闭目养神” —— 也许注意力就是这个“神”。
 如果查看一下你的电脑的运行情况，你会发现，只要不是正在做什么特别大的计算，电脑的 CPU 并不是满负荷运转 —— 可能 90% 以上的计算能力都处在闲置状态。
 这个闲置状态的概念，也可以类比于人脑。让你算一道题，做一件需要集中注意力的事情，你会感到有点累，这就是大脑处在某种任务状态。如果当前没有任何任务，什么事情都不用做，就可以认为大脑处在闲置状态 —— 这就是 “默认模式网络”。
