--- a/note/...book_古诗.md
+++ b/note/...book_古诗.md
@@ -92,6 +92,15 @@
 
 
 ## 其他
+黄叶黄花古城路，秋风秋雨别家人。
+    -- 李群玉《金塘路中》
+
+裙拖六幅湘江水，鬓耸巫山一段云。
+风格只应天上有，歌声岂合世间闻。
+胸前瑞雪灯斜照，眼底桃花酒半醺。
+不是相如能赋客，争教容易见文君。
+    -- 李群玉《同郑相公出歌姬小饮戏赠》
+
 漠漠郁金香在臂，亭亭古玉佩当腰。
 气寒西北何人剑，声满东南几处箫。
     -- 龚自珍《秋心》
