Adds reading notes for the book - ToT.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -154,3 +154,6 @@ Books are not here to show how intelligent an cultivated you are. Books are out 
 
 ## 8 Tactics for Dealing with Haters
 Robustness is when you care more about the few who like your work than the multitude who hates it(artists); fragility is when you care more about the few who hate your work than the multitude who loves it(politicians).
+
+## Rainn Wilson
+I think that our life is a journey, dig deep on your journey and the world will benefit from it.
