Adds reading notes for the book - ToT.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -157,3 +157,9 @@ Robustness is when you care more about the few who like your work than the multi
 
 ## Rainn Wilson
 I think that our life is a journey, dig deep on your journey and the world will benefit from it.
+
+## Naval Ravikant
+If you want to be successful, surround yourself with people who are more successful than you are, but if you want to be happy, surround yourself with people who are less successful than you are.
+
+What you choose to work on, and who you choose to work with, are far more important than how hard you work.
+Free education is abundant, all over the Internet. It's the desire to learn that's scarce.
