Adds reading notes for the book - ToT.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -163,3 +163,15 @@ If you want to be successful, surround yourself with people who are more success
 
 What you choose to work on, and who you choose to work with, are far more important than how hard you work.
 Free education is abundant, all over the Internet. It's the desire to learn that's scarce.
+
+## Testing the "impossible": 17 Questions that Changed My Life
+Whenever you find your on the side of the majority, it is time to pause and reflect.
+    -- Mark Twain
+
+No hurry, no pause.
+
+Slow is smooth. Smooth is fast.
+  -- Navy SEAL principle
+
+## Jamie Foxx
+When you raise your kids, you're the bow, they're the arrow, and you just try to aim them in the best direction that you can, and hopefully your aim isn't too off.
