--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -175,3 +175,8 @@ Slow is smooth. Smooth is fast.
 
 ## Jamie Foxx
 When you raise your kids, you're the bow, they're the arrow, and you just try to aim them in the best direction that you can, and hopefully your aim isn't too off.
+
+
+## Conclusion
+Learn the rules like a pro, so you can break them like a artist
+    -- Pablo Picasso
