Adds reading notes for columns.

--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,10 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-09-05 《蒙娜丽莎》案外案
+好的艺术家抄袭，伟大的艺术家偷窃。
+
+
 ## 2017-09-04  讲故事的信
 特性是每个人个性中最难且无法控制的部分，它会自然流露在走路、吃饭、讲话、工作和每天的生活中，也会将你的天赋引往不同的方向发展。
 
