Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,10 +7,29 @@
 3、个人，我们与自己的关系；
 4、工具，提升前三者的效率。
 
+
+
+## 2017-09-26  个人篇总结：所有问题，最终的最终都是个人的问题
+演讲不是让自己酣畅淋漓地表达，而是让听众醍醐灌顶地吸收。
+
+回顾个人篇，我特别希望你能记住两件事：1）最可怕的能力，是获得能力的能力；2）人与人最大的差别，是认知的差别。
+
+
+## 2017-09-25  管理篇总结：战略大于组织，组织大于人，一错全错
+我认为是：1）所有企业与员工，本质上都是合伙关系。注意：工资、奖金、股权、价值观的不同用法；2）一切管理问题的思考顺序都是：战略，组织，人。
+
+
+## 2017-09-24  商业篇总结：商业世界的左脚、右脚，一步一步，从不踏空
+回顾整个商业篇，用一句话总结就是：创造价值，是用创新的方法，提高定价权；传递价值，是用效率的手段，降低定倍率。
+
+
 --------------------------------------------------------------------------------
 
 
 # 工具篇
+
+## 2017-09-06  休息运动：如何最高效地休息和运动？
+这世上的事情，不分工作还是生活，只分喜欢做还是不喜欢做，值得做还是不值得做，有能力做还是没能力做。把喜欢做的、值得做的、有能力做的事当成目标，把赚钱当成结果，你会发现工作甜似生活；否则，生活苦如工作。
 
 
 ## 2017-08-21  罗伯特议事规则：如何用“十二原则六步法”开好一个会
