--- a/note/...column_世界名刊速读.md
+++ b/note/...column_世界名刊速读.md
@@ -5,6 +5,25 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-09-11  《新科学家》| 数学的起源
+对一般人来说，数学意味着数字和计算，但其实数学远比这个答案要复杂得多，它是研究数量、结构、变化、空间以及信息等概念的一门学科。总的来说，数学可以分成三个部分，几何、分析和代数。
+几何，geometry，是描述静态物体空间关系的。
+分析，analysis，是用来处理物体随时间改变和移动的，像微积分就属于分析。
+代数，algebra，是帮助我们用数字、符号和方程式来处理信息的。像群论、图论和拓扑学都属于代数的范畴。
+
+举个“赌徒谬误”的例子，比如你在玩俄罗斯轮盘赌，小球第一次停在了红色区域，你会觉得，下一次小球出现在黑色区域的可能性会更大，但是从数学概率上来说，其实每一次的概率都是50%。那为什么你会觉得，小球再一次出现在红色区域的概率不如出现在黑色区域的大呢？
+这是因为在我们祖先的生活经验里，在一个地方生活过一段时间，把那里的食物采集得差不多之后，就必须换地方了，不然没东西可以吃了，所以从生存经验上来说，出现过一次的事件，不太可能出现第二次，这种认知模式被保留下来，就出现了“赌徒谬误”。
+
+再举个例子，让你感觉一个1公斤的砝码和一个2公斤的砝码，哪个重？你肯定立刻就感觉出来是2公斤的更重，但是如果让你感觉一个21公斤的砝码和一个22公斤的砝码哪个更重，同样是差一公斤，这次你就不太能感觉出来了。
+这叫做韦伯•费希纳定律。对人类来说，只有外界的刺激达到一定的比例，才会引起我们的感觉差别。
+
+
+## 2017-09-05  《BBC聚焦》| 为什么地球上的资源用不完？
+地球上面狼的数量，是在不断增加的，狮子的数量是在不停减少的，而老虎的数量维持不变，这是因为，狼一般都生活在富裕国家，狮子生活在贫穷国家，而老虎一般生活在中等发达程度的国家。这个也就显示了，越富裕的国家，对于生态的保护就越好，森林就越多，这就是为什么科技越发达，我们就会越富裕，对于资源的消耗反而会更少的原因。
+
+阿拉伯的石油部长亚马尼的一句话：“石器时代的终结，不是因为没有石头了，石油时代在石油储备耗尽之前也会终结。”  这是因为，人类有了新的替代品。   
+
+
 ## 2017-08-17  《鹦鹉螺》| 训练情绪粒度，提升情商
 情商，就是你感知别人和自己情绪的能力。
 
