--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,12 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-09-30  卡尼曼的经济学课（下）：理性的作用
+我的理解，理性是经过审慎思考之后，利用现有知识，抛开偏见，推导出合乎逻辑的合理的结论。
+因此，理性的三要素是，有知识，无偏见，合乎逻辑。
+人在投资和做事情的时候，喜欢一件事情，就会为自己的判断找出越来越多的理由，证实自己的判断是正确的。其实你所收集的信息，只不过是证据全局中很小的一部分，你可能忽视掉了事实的主要部分。
+
+
 ## 2017-08-29  犹太人的教育方式 Chavrusa 和苏格拉底对勇气的看法
 Chavrusa 一词的希伯来语原意是伙伴（companionship)，后来指拉比犹太教学习经典的特定方法。使用这种方法时，两个人一起研读经典，然后开始辩论，看谁能够辩论赢。
 在辩论中，观点不重要，重要的是逻辑。哪个人能提出更符合逻辑的结论，并且用更强的逻辑性证明它，哪个人就赢了。
