Adds reading notes for the book - BTL.

--- a/note/...book_成为技术领导者.md
+++ b/note/...book_成为技术领导者.md
@@ -9,6 +9,7 @@
 把过程作为领导对象，则是对人做出反应，向他们提供选择，给他们适度的自由。他们发挥更多能力的过程，就好像园丁培育种子的过程 —— 不是偃苗助长，而是催生自身蕴含的力量。
 领导力就是催生其他人身上的创造力和生产力。要施展它就必须要创造出一个环境，而不是将自己局限于通过在少数特定场合的重点行动 —— 惩罚和奖励 —— 来得到特定的结果。
 
+
 ### 2. 领导方式模型
 领导力的 MOI 模型：
   - M：激励 Motivation
@@ -21,9 +22,17 @@
 
 要引入一种新的测量手段来提升质量，必须先创造工具（创新 I），然后教人使用并说服他们尝试（激励 M），最后组织起一种结构来支持工具的使用者（组织 O）
 
+
 ### 3. 解决问题的方式
   - 理解问题
   - 管理思维（一系列想法）
   - 保证质量
 
+
 ### 4. 领导的成长
+领导就是驾驭变化的人，他们驾驭其他人的变化、团队的变化、组织的变化。最重要的是，领导还要把握自身的变化。
+关于成长的更准确的理论，你并不是从一个高原直接飞跃到另一个高原，成长是逐步发生的。为了成长，你必须离开现有的可靠支撑，放弃已经熟练掌握的策略，甚至可能跌入低谷。如果不放弃已经熟练的策略，就有可能稳步进展，但是永远不会脱离某个稳定阶段。
+
+
+## 5. 我做不到，因为······
+技术明星成为领导之后，他们已经从自己的专业领域跳出来，掌握了通用的技术。他们能与十多个领域的技术专家沟通，很容易就能分辨对方的水平。这才是他们的工作所需要的技术素质。
