--- a/note/...book_古诗.md
+++ b/note/...book_古诗.md
@@ -9,6 +9,10 @@
 香雾云鬟湿，清辉玉臂寒。何时倚虚幌，双照泪痕干。
     --《月夜》
 
+岱宗夫如何？齐鲁青未了。造化钟神秀，阴阳割昏晓。
+荡胸生层云，决眦入归鸟。会当凌绝顶，一览众山小。
+    --《望岳》
+
 
 ## 李白
 凤凰台上凤凰游，凤去台空江自流。吴宫花草埋幽径，晋代衣冠成古丘。
