Adds reading notes.

--- a/note/...book_the_war_of_art.md
+++ b/note/...book_the_war_of_art.md
@@ -1,5 +1,9 @@
 # the WAR of ART
 2017-10-16
 
+
 ## What I Know
 There's secret that real writers know that wannabe writers don't, and the the secret is this: It's not the writing part that's hard. What's hard is sitting down to write.
+
+## A Professional
+Someone once asked Somerset Maugham if he wrote on a schedule or only when struck by inspiration. "I Write only when inspiration strikes," he replied. "Fortunately it strikes every morning at nine o'clock sharp."
