--- a/note/...book_古诗.md
+++ b/note/...book_古诗.md
@@ -13,6 +13,11 @@
 荡胸生层云，决眦入归鸟。会当凌绝顶，一览众山小。
     --《望岳》
 
+醉眠秋共被，携手日同行。
+    --《与李十二白同寻范十隐居》
+
+痛饮狂歌空度日，飞扬跋扈为谁雄。
+    --《赠李白》
 
 ## 李白
 凤凰台上凤凰游，凤去台空江自流。吴宫花草埋幽径，晋代衣冠成古丘。
