Adds notes for the took - WoA

--- a/note/...book_the_war_of_art.md
+++ b/note/...book_the_war_of_art.md
@@ -7,3 +7,6 @@ There's secret that real writers know that wannabe writers don't, and the the se
 
 ## A Professional
 Someone once asked Somerset Maugham if he wrote on a schedule or only when struck by inspiration. "I Write only when inspiration strikes," he replied. "Fortunately it strikes every morning at nine o'clock sharp."
+
+## A Professional Dedicates Himself To Mastering Technique
+The professional is sly. He knows that by toiling beside the front door of technique, he leaves room for genius to enter by the back.
