Adds reading notes for the book - WoA

--- a/note/...book_the_war_of_art.md
+++ b/note/...book_the_war_of_art.md
@@ -5,8 +5,19 @@
 ## What I Know
 There's secret that real writers know that wannabe writers don't, and the the secret is this: It's not the writing part that's hard. What's hard is sitting down to write.
 
+
+## BOOK ONE - Resistance - Defining the Enemy
+
+
+## BOOK TWO - Combating Resistance - Turning Pro
 ## A Professional
 Someone once asked Somerset Maugham if he wrote on a schedule or only when struck by inspiration. "I Write only when inspiration strikes," he replied. "Fortunately it strikes every morning at nine o'clock sharp."
 
 ## A Professional Dedicates Himself To Mastering Technique
 The professional is sly. He knows that by toiling beside the front door of technique, he leaves room for genius to enter by the back.
+
+## YOU, INC.
+If we think of ourselves as a corporation, it gives us a healthy distance on ourselves. We're less subjective. We don't take blows as personally.
+
+
+## BOOK THREE - Beyond Resistance - The Higher Realm
