Adds reading notes for the book - BTL.

--- a/note/...book_成为技术领导者.md
+++ b/note/...book_成为技术领导者.md
@@ -3,14 +3,14 @@
 
 
 ## 第 1 部分  定义
-### 1. 领导力究竟是什么？
+## 1. 领导力究竟是什么？
 应邀去上课 —— 这是领导力的一种表现；应邀参与技术评审委员会 —— 这同样是领导力的表现；写文章，写书 —— 这是更高层次的领导力。
 所谓领导力，就是创造这样一个环境，每个人都能在其中发挥出更多的能力。
 把过程作为领导对象，则是对人做出反应，向他们提供选择，给他们适度的自由。他们发挥更多能力的过程，就好像园丁培育种子的过程 —— 不是偃苗助长，而是催生自身蕴含的力量。
 领导力就是催生其他人身上的创造力和生产力。要施展它就必须要创造出一个环境，而不是将自己局限于通过在少数特定场合的重点行动 —— 惩罚和奖励 —— 来得到特定的结果。
 
 
-### 2. 领导方式模型
+## 2. 领导方式模型
 领导力的 MOI 模型：
   - M：激励 Motivation
   - O：组织 Organization
@@ -23,16 +23,137 @@
 要引入一种新的测量手段来提升质量，必须先创造工具（创新 I），然后教人使用并说服他们尝试（激励 M），最后组织起一种结构来支持工具的使用者（组织 O）
 
 
-### 3. 解决问题的方式
-  - 理解问题
+## 3. 解决问题的方式
+  - 理解问题（定义问题）
   - 管理思维（一系列想法）
   - 保证质量
 
 
-### 4. 领导的成长
+## 4. 领导的成长
 领导就是驾驭变化的人，他们驾驭其他人的变化、团队的变化、组织的变化。最重要的是，领导还要把握自身的变化。
 关于成长的更准确的理论，你并不是从一个高原直接飞跃到另一个高原，成长是逐步发生的。为了成长，你必须离开现有的可靠支撑，放弃已经熟练掌握的策略，甚至可能跌入低谷。如果不放弃已经熟练的策略，就有可能稳步进展，但是永远不会脱离某个稳定阶段。
 
 
 ## 5. 我做不到，因为······
 技术明星成为领导之后，他们已经从自己的专业领域跳出来，掌握了通用的技术。他们能与十多个领域的技术专家沟通，很容易就能分辨对方的水平。这才是他们的工作所需要的技术素质。
+
+
+## 第 2 部分  创新
+## 6. 创新的三大障碍
+  1. 看不到自己，看不到自己的行为，所以没有机会改变
+  2. 没问题综合症，欺骗自己，以为早就知道所有问题的答案
+  3. 看不见其他办法，唯一办法信念
+
+
+## 7. 加深自我了解的工具
+写日记的第一大优势就是，它不像书本或演讲那样有距离感，日记里的每一点都与你有关。因为个人的学习都是属于个人的，我不能预知你会学到什么，但是我能保证你会学到一些东西。
+
+
+## 8. 提升创新能力
+所谓 “偷窃”，指的是从一个人（这就是 “抄袭”）或是许多人（这就是 “研究”）那里借用想法。
+
+
+## 9. 眼光（vision 愿景）
+事业线：  
+研究事业线的第一条重要经验就是：重要的不是事情，而是你对事情的态度。
+研究事业线的第二条重要经验就是：每个人都会经历失败，而这种失败可能正是成功带来的。
+研究事业线的第三条重要经验就是：每个成功的技术领导者都具有个人眼光。
+
+成为创新者确实需要一个神秘要素，那就是特殊的眼光（vision），它能把寻常和特殊结合起来，寻常部分是日常的，生活中的一般事务。除此之外还存在特殊部分，即个人的独特眼光，领导依靠它来执着的实践伟大的想法。
+
+如果人们分享你的眼光（愿景），你就能带他们取得出色的成绩。
+
+## 第 3 部分  激励
+## 10. 激励他人的第一大障碍
+激励的第一大障碍是各种各样的盲目：不能像其他人那样看待自己。
+我们总是认为自己要传达的信息是非常清楚的，但是你通常应该假设，每次接受都会丢失一些信息。你在接受他人的信息时也是一样。人永远不能毫无错漏地收到发来的信息。
+
+## 11. 激励他人的第二大障碍
+第二大障碍：人和任务的冲突
+面向任务方式的经验：
+  1. 关涉到生存问题时，必须把人放在第一位，别无选择。如果人们担心自己的性命，那么，除非去保卫自身安全，否则他们什么也干不好
+  2. 如果不是高度技术化的工作，领导者就可以通过威慑来领导，不需要太强的能力（流水线工人的领导）
+  3. 有强大技术背景的人可以把任何任务都转化为技术任务，以此逃避他们不想做的事情
+  4. 不关心人的领导没有可以领导的人，除非手下人别无选择
+  5. 如果你不能提供什么实质内容，却要假装有内容，那么无论你多么关心别人，都不会吸引住他们
+  6. 我们所做的工作，几乎无一真正重要到必须牺牲执行者的未来
+  7. 要成为成功的技术领导，就不能对任何人的人性有丝毫的抑制
+  8. 如果你是领导，以平常心对待他人就是你的任务。在此之外，没有其他值得完成的任务（同理心）
+
+
+## 12. 帮助其他人会发生的问题
+  1. 希望帮助他人可能是高尚的动机，但这不会降低帮助的难度
+  2. 如果对方不希望接受你的帮助，无论你多么聪明，多么出色，都不能成功地帮助他们
+  3. 有效帮助的开始，只能是双方都同意的对问题的清晰定义
+  4. 即便人们承认他们需要你的帮助，这种承认也是会变的
+  5. 希望帮助其他人的人，通常都希望有所回报，虽然他们可能并没有觉察到这一点
+  6. 大多数人都知道，提供帮助的人也是自私的，却又认为自己是例外
+  7. 无论看起来多奇怪，大多数人其实是希望帮助他人的
+
+如果你不真正关心自己所领导的人，就永远也不可能做好他们的领导。
+
+
+## 13. 学会激励他人
+## 14. 力量从何处来
+## 15. 力量、缺陷与一致
+实际上你学到的行为都不是自然的，因为自然就是保持一致，就是展现你内心真实的感受。
+
+
+## 第 4 部分  组织
+## 16. 培养组织力
+> 讲述了，学会利用组织的资源和力量
+
+## 17. 解决问题团队的有效组织形式
+组织决策形式：
+  - 投票，民主式
+  - 独裁，强势领导，乾纲独断
+  - 一致，所有成员一致同意
+  - 混合，综合应用以上
+
+在什么情况下，投票会是一个好的组织形式呢？如果有明确的时间限制，投票就是个不错的选择，前提是大家理解且能认可投票的方式。如果我们要确保避免做出台差的选择，投票也是可取的方式，但是我们通常会为此牺牲一些做出更好选择的可能性。也就是说，投票决策能够保证结果等于或高于一般水平。
+
+最高效有力的领导是这样的人：他们能够帮助团队认识环境的改变，并找到合适的组织决策方式。
+
+
+## 18. 有效组织的障碍
+障碍：
+  - 抓大目标，忙于做大事，没有时间来做那些组织本来应该做的事情
+  - 把人当机器来摆布
+  - 亲自动手，领导的职责通常不是解决单个问题，而是创造一个环境，许多问题都可以在其中解决，现在是这样，未来也是这样。
+  - 奖励低效（奖励加班，苦劳），组织不是要解决问题，而是要避免问题（不停制造 bug，加班解决 bug，又制造 bug，奖励这种辛苦）
+
+
+## 19. 学习成为组织者
+
+
+## 第 5 部分  转变
+## 20. 领导要面对的考核
+## 21. 通过自己的领导力考验
+NEC（日电）的董事长小林（Koji Kobayashi）有个故事，Western Electric Company 给 NEC 送来一些设备，封装箱上写着：“警告：不得破坏封口！”。当时，小林先生才十二五岁，是一位年轻、充满好奇的工程师，他觉得自己应该打开盒子，藐视一下要求服从、恭顺权威的文化。他打开了封盒，里头是一块简单的电路，NEC 很容易就能在日本制造。之后，NEC 确实这么做了。
+多年后小林先生讲起这个故事，他清醒地认识到，这个盒子其实是一重关键的考验，通过它所需要的品质，最终让小林成为世界上名列前茅的高技术公司的董事会主席，变成了真正解决问题的领导。高层人物制定规则，也是在破坏旧的规则。胆怯的服从者不会升到高层，也不会盲目违背规则。要成为领导，就必须有勇气打开密封的盒子，而且还要能坚持在公司干上五十年。
+
+
+## 22. 个人转变计划
+## 23. 时间从那里来
+> 领导者如何赢得时间？
+
+  - 不要重复你已经布置下去了的任务，即便你必须让手下人犯错误
+  - 不要操心琐碎的细节
+  - 不要争论技术细节来证明你的技术优势
+  - 自己区分好主次，不要靠危机来安排你的行为
+  - 成为主导评审的人
+  - 注意自己无事可干的时候在做什么
+  - 倾听其他人已经学到的知识
+  - 分享阅读成果
+  - 让其他人展示他们的聪明才智
+
+## 24. 支持从哪里来
+> 领导者要建立自己的的支持系统
+
+  - 技术资源支持
+  - 来自批评的支持
+  - 对成长的支持
+  - 身体、精神、情绪的支持
+  - 为此领导力的支持
+
+解决问题的领导力的悖论在于，你必须改变才能保持不变。人们很容易就会陷入陷阱，你寻求帮助时，会无意识地选择能够给出自己所希望听到答案的人。这种做法的最大问题在于，你无法意识到这一点。
