Adds reading notes for the book - WoA.

--- a/note/...book_the_war_of_art.md
+++ b/note/...book_the_war_of_art.md
@@ -21,3 +21,5 @@ If we think of ourselves as a corporation, it gives us a healthy distance on our
 
 
 ## BOOK THREE - Beyond Resistance - The Higher Realm
+## Approaching The Mystery
+When we sit down and work, we become like a magnetized rod that attracts iron filings. Ideas come. Insights accrete.
