--- a/note/...book_古诗.md
+++ b/note/...book_古诗.md
@@ -5,6 +5,14 @@
 
 
 ## 杜甫
+一片花飞减却春，风飘万点正愁人。且看欲尽花经眼，莫厌伤多酒入唇。
+江上小堂巢翡翠，苑边高冢卧麒麟。细推物理须行乐，何用浮名绊此身。
+    --《曲江二首》其一
+
+朝回日日典春衣，每日江头尽醉归。酒债寻常行处有，人生七十古来稀。
+穿花蛱蝶深深见，点水蜻蜓款款飞。传语风光共流转，暂时相赏莫相违。
+    --《曲江二首》其二
+
 今夜鄜州月，闺中只独看。遥怜小儿女，未解忆长安。
 香雾云鬟湿，清辉玉臂寒。何时倚虚幌，双照泪痕干。
     --《月夜》
