Adds three poems

--- a/note/...book_古诗.md
+++ b/note/...book_古诗.md
@@ -5,6 +5,18 @@
 
 
 ## 杜甫
+十日画一水，五日画一石。
+    --《戏题王宰画山水图歌》
+
+莫思身外无穷事，且尽生前有限杯。
+    --《漫兴九首》其四
+
+丞相祠堂何处寻，锦官城外柏森森。
+映阶碧草自春色，隔叶黄鹂空好音。
+三顾频烦天下计，两朝开济老臣心。
+出师未捷身先死，长使英雄泪满襟。
+    --《蜀相》
+
 一片花飞减却春，风飘万点正愁人。且看欲尽花经眼，莫厌伤多酒入唇。
 江上小堂巢翡翠，苑边高冢卧麒麟。细推物理须行乐，何用浮名绊此身。
     --《曲江二首》其一
