Adds reading notes for columns.

--- a/note/...column_世界名刊速读.md
+++ b/note/...column_世界名刊速读.md
@@ -5,8 +5,19 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-11-24 《大西洋月刊》| 《滚石》杂志的兴衰
+History is not what happened, but what remains when everything else is forgotten.
+历史，不是发生了什么，而是当所有事被遗忘的时候，留存下来的东西。
+
+
+## 2017-11-13 《大西洋月刊》| 正在失宠的远程办公
+什么是曝光效应呢？它的定义很简单，就是我们倾向于被我们熟悉的事物所吸引。简单点来说，熟悉度越高，喜欢的程度就越高。
+反映在办公室的人际关系上就是，你有意识地提高别人对你的熟悉度，这样就可以增加他们对你喜欢的程度。
+
+
 ## 2017-10-20 《纽约客》| 全球最畅销的百科全书
-作者舒尔茨在文章里对这个问题有一段很棒的回答：“我们的认知，可以改变我们的行为，也许不是立竿见影，也许会有反复，但是拥有知识，已经足够对人产生决定性的变化。”。因为知识是思考的起点，思考是行动的起源
+作者舒尔茨在文章里对这个问题有一段很棒的回答：“我们的认知，可以改变我们的行为，也许不是立竿见影，也许会有反复，但是拥有知识，已经足够对人产生决定性的变化。”。
+因为知识是思考的起点，思考是行动的起源。
 
 
 ## 2017-10-11 《卫报》| 逃离自我贬低的状态
