--- a/note/...column_精英日课_第二季.md
+++ b/note/...column_精英日课_第二季.md
@@ -5,6 +5,87 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-11-29 《以大制胜》2：人心比事实重要
+所谓认知失调，就是当你发现你的行为和你心目中的自我形象不相符的时候，你产生一个幻觉来解释自己的行为。
+
+
+## 2017-11-22 怎样用系统下一盘大旗
+老百姓关心具体事件的成败，高手关注的是一个概率系统。
+只要我这个系统合理，那么具体事件结果都是偶尔波动，长期看我一定是赢。
+
+有的人拥有系统。有的人拥有的，只是别人系统中的一个角色。
+所以人要想真正安身立命，得建立自己的系统啊。那如果你有一个系统，你应该怎么看待系统里的那些角色呢？ 
+
+
+## 2017-11-14 《为什么佛学是真的》5：正念自控法
+每一个感情模块都在使用理性来帮自己说话。 理性，只不过是感情的武器。
+
+每个模块的工作方式，都是感情。并没有哪个模块比哪个模块更理性 —— 各个模块都可以调用理性。我们的意识以为自己在做理性分析，其实意识只不过是在倾听各个模块用理性来为自己找理由而已。
+我们的所有决策，都是从感情开始，以感情结束。理性只不过是感情的工具，感情才是真正的决策者。
+
+
+## 2017-11-11 给高手的学习方法建议
+__怎样读书__  
+强力研读的第一个特点是：不好玩。
+世界冠军培训基地没有"寓教于乐"这个概念。"强力研读"不是为了娱乐和休息，而是用非常严肃认真的态度，非得把一本书给融会贯通以至于长在自己的大脑里不可。
+
+强力研读的第二个特点是：用的时间很少。
+就如同在那种专门培养天才的最好的音乐学校里，孩子们每天真正练琴的时间绝对不超过2个小时一样。没人能长时间坚持那样的强度，而没有强度的训练还不如不练。
+你可能每天花很多时间阅读，但你很难做到用很多时间强力研读。要把精力充沛而又不受打扰的时间段留给最好的书。
+
+强力研读的第三个特点是：不追求快。
+处在我们的“学习区”内的好书，应该慢慢的仔细读。追求把一本书快速读完，就好像追求把一只曲子快速弹完一样，这不是练琴是完成练琴任务。
+读书人的一个秘密就是，读得慢，吸收知识和增长内力的效率反而更高。
+
+一本书应该被读两遍，而且只读两遍。好书读一遍不可能掌握精要，反过来说如果一遍就够了，那这本书也不值得强力研读。
+我们说的思想类书籍，不是什么学术著作，所以再好也没必要读三遍。两遍正好。而且最有效率的办法是读完一遍马上再读一遍。
+第一遍是正常通读，只要放松地欣赏作者的精妙思想和有趣故事即可。不要追求读的快，值得时不时停下来思考一下的书才是好书。
+在读第二遍的同时写下读书笔记。这时候就不要每个字都读了，书中作为例子的故事大可跳过，要专注于思想脉络。读一章，记一章的笔记，直至读完。然后这本书就可以束之高阁，甚至直接扔了。
+
+__怎样记笔记__  
+笔记最好要写到可以取代原书的程度。而给课文概况中心思想和段落大意的方法、还有用画“思维导图”的方法来做读书笔记，意义都不大。
+强力研读要求读书笔记必须包括四方面的内容：清晰表现每一章的逻辑脉络、带走书中所有的亮点、大量自己的看法和心得、发现这本书和以前读过的其它书或文章的联系。
+
+读书笔记首先要清晰表现每一章的逻辑脉络。它第一作用就是抛开故事记住文章。让一本书从厚变薄，从具体的山川景色变成抽象的地图。只有当你跳出字里行间，以居高临下的姿态俯视全章，它的脉络才能变得清晰。看清楚以后不要抄作者的话，用自己的语言把这个脉络写出来，就好像画地图一样。
+
+逻辑脉络之外，如果发现真正好的小故事 —— 我们称之为"亮点"—— 那么就把这个故事也给写下来，甚至具体到细节。读书，在某种程度上就是寻找能够刺激自己思维的那些亮点。我们在分析脉络的时候要忽略故事，分析完脉络再把故事带走。
+
+高水平读书人看完的书上写满了批注。你可以写下自己对这件事的理解，对作者的质疑或肯定。更高级的批注则是写下自己因为看到这段文字而产生的灵感。也许你突然想到这解决了你之前一直关注的问题 —— 尽管这个问题看似与此书无关；也许你想到对书中思想的一个新的应用；也许你想到你可以把作者的理论往前推一步。这些想法未必都真的有用，但是都非常宝贵，因为如果你不马上记下来它们很快就会被忘记。多年以后翻阅笔记的时候，你会觉得自己的心得灵感比原书更有价值。
+
+好书之所以要读两遍，最重要的目的就是为了这些心得、灵感和联系。第一遍读是为了陷进去，第二遍读是为了跳出来。
+读书笔记是一种非常个性化的写作，是个人知识的延伸。它不是书评，不为了公开发表，你可以完全专注于意思，而不必关心文笔。笔记是对一本好书最大的敬意。
+
+
+__思维导图__  
+如果你只是想做读书笔记或者会议摘要，用最朴实、厚道的 bullet points 是最好的办法，树状结构列举提纲，整理要点，完全没有必要画妖艳的思维导图。那思维导图是不是一个被高估了的工具呢？不是。思维导图是一个被低估了的工具。思维导图，根本就不是一个整理和记忆工具。它是一个思考工具。 
+
+思维导图，本质上就是思维的草稿图。
+
+更高级的用法是用思维导图做决策和判断。如同开会一样，第一阶段是畅所欲言，谁有什么想法都提出来写下来；第二阶段是评估这些想法，发现不同想法之间的联系，把他们用线连接起来；第三阶段是形成决议：把讨论中淘汰掉的想法都划掉，剩下的分出主次和执行顺序，然后整理一下就可以照着做了。
+这三个阶段，其实就是从发散思维，到最后集体的集中思维的过程。先发扬民主，最后形成集中。这个思维过程，这种决策方式，才叫思维导图 —— 为了引导思维而画张图。
+
+花哨的装饰和美观的外形未必实用，真正的武器身上应该有创伤、有错误、有硝烟的味道。
+
+
+## 2017-11-09 《为什么佛学是真的》3：大脑是个多元政体
+2013年，两个进化心理学家，肯里克和格里斯克维西斯，写了一本书，叫《理性动物》（有中文版，英文版书名是 The Rational Animal: How Evolution Made Us Smarter Than We Think ），说自然选择给人的大脑提供了七个思想模块：
+
+  1. 自我保护，前面刚说过；
+  2. 吸引配偶，也就是前面说的“求偶模块”；
+  3. 保住配偶，也就是防止配偶跟别人跑了，这个模块一旦开启，人的注意力就不是在异性上，而是在潜在的同性竞争对手上了；
+  4. 群体认同感，希望加入组织，获得社交和团队合作；
+  5. 关爱亲属，保护自己的孩子和父母、兄弟姐妹等有基因关联的人；
+  6. 社会地位；
+  7. 避免疾病，我们看到不干净的东西会感到恶心，喜欢舒适的环境。
+
+我猜还有别的模块不在这个列表里。但是这个“模块说”，现在基本上是学界的一个共识、或者说至少是主流的学说之一。
+这些模块是在长期进化过程中，我们大脑中一直存在的。人一出生，大脑就已经“预装”了这些模块。一个没有受过任何教育的人，见到美丽异性也想追求、看到脏乱差环境也会反感。
+
+
+## 2017-11-03 一个基于信息论的人生观
+我们平时学习知识、积累经验，就是要减少世界给自己的不确定性。
+新人看哪里都新鲜，老手看哪里都是俗套 —— 只有这样，他才能从一大堆可预测的事物之中敏感地抓住那些不寻常之处，那才是真正有价值的信息。
+
 
 ## 2017-10-23 《强力瞬间》4：好关系的配方
 团队凝聚力 =  目标感 + 一起奋斗的经历 + 协调同步
