--- a/note/...book_the_war_of_art.md
+++ b/note/...book_the_war_of_art.md
@@ -2,8 +2,13 @@
 2017-10-16
 
 
+## What I Do
+How many pages have I produced? I don't care. Are they any good? I don't even think about it. All that matters is I've put in my time and hit it with all I've got. All that counts is that, for this day, for this session, I have overcome Resistance.
+
+
 ## What I Know
 There's secret that real writers know that wannabe writers don't, and the the secret is this: It's not the writing part that's hard. What's hard is sitting down to write.
+What keeps us from sitting down is Resistance.
 
 
 ## BOOK ONE - Resistance - Defining the Enemy
