--- a/note/...book_古诗.md
+++ b/note/...book_古诗.md
@@ -5,6 +5,18 @@
 
 
 ## 杜甫
+花近高楼伤客心，万方多难此登临。
+锦江春色来天地，玉垒浮云变古今。
+北极朝廷终不改，西山寇盗莫相侵。
+可怜后主还祠庙，日暮聊为《梁父吟》。
+    --《登楼》
+
+江碧鸟逾白，山青花欲然。今春看又过，何日是归年？
+    --《绝句》
+
+世路虽多梗，吾生亦有涯。此身醒复醉，乘兴即为家。
+    --《春归》
+
 为人性癖耽佳句，语不惊人死不休。
 老去诗篇浑漫兴，春来花鸟莫深愁。
     --《江上值水如海势聊短述》
