Adds some poems.

--- a/note/...book_古诗.md
+++ b/note/...book_古诗.md
@@ -5,6 +5,16 @@
 
 
 ## 杜甫
+细草微风岸，危樯独夜舟。
+星垂平野阔，月涌大江流。
+名岂文章著，官应老病休。
+飘飘何所似，天地一沙鸥。
+    --《旅夜书怀》
+
+孤雁不饮啄，飞鸣声念群。
+谁怜一片影，相失万重云。
+    --《孤雁》
+
 中夜怀友朋，乾坤此深阻。
 浩荡前后间，佳期付荆楚。
     --《宿青溪驿奉怀张员外十五兄之绪》
