Adds two poems.

--- a/note/...book_古诗.md
+++ b/note/...book_古诗.md
@@ -5,6 +5,16 @@
 
 
 ## 杜甫
+群山万壑赴荆门，生长明妃尚有村。
+一去紫台连朔漠，独留青冢向黄昏。
+画图省识春风面，环佩空归月夜魂。
+千载琵琶作胡语，分明怨恨曲中论。
+    --《咏怀古迹五首·咏明妃》
+
+诸葛大名垂宇宙，宗臣遗像肃清高。
+三分割据纡筹策，万古云霄一羽毛。
+    --《咏怀古迹五首·咏诸葛孔明》
+
 细草微风岸，危樯独夜舟。
 星垂平野阔，月涌大江流。
 名岂文章著，官应老病休。
