--- a/note/...book_古诗.md
+++ b/note/...book_古诗.md
@@ -5,6 +5,12 @@
 
 
 ## 杜甫
+剑外忽传收蓟北，初闻涕泪满衣裳。
+却看妻子愁何在，漫卷诗书喜欲狂。
+白日放歌须纵酒，青春作伴好还乡。
+即从巴峡穿巫峡，便下襄阳向洛阳。
+    --《闻官军收河南河北》
+
 群山万壑赴荆门，生长明妃尚有村。
 一去紫台连朔漠，独留青冢向黄昏。
 画图省识春风面，环佩空归月夜魂。
