--- a/note/...2018_handy_notes.md
+++ b/note/...2018_handy_notes.md
@@ -10,3 +10,6 @@ date      : 2018-01-01
 
 假如一味从自己的观点出发凝望世间万物，世界难免会被咕嘟咕嘟煮干。人就会身体发僵，脚步沉重，渐渐变得动弹不得。可是一旦从好几处视点眺望自己所处的立场，换句话说，一旦将自己的存在托付给别的体系，世界就会变得立体而柔软起来。人只要生活在这个世界上，这就是具有重大意义的姿态。
     --《我的职业是小说家》
+
+Easy choices, hard life. Hard choices, easy life.
+    -- Jerzy Gregorek
