Adds reading notes.

--- a/note/...2018_handy_notes.md
+++ b/note/...2018_handy_notes.md
@@ -13,3 +13,6 @@ date      : 2018-01-01
 
 Easy choices, hard life. Hard choices, easy life.
     -- Jerzy Gregorek
+
+The secret of leadership is simple: Do what you believe in. Paint a picture of the future. Go there. People will follow.
+    -- Seth Godin
