Adds reading notes for columns.

--- a/note/...column_世界名刊速读.md
+++ b/note/...column_世界名刊速读.md
@@ -5,6 +5,10 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-12-15 《鹦鹉螺》| 扑克牌高手教你正确做决定
+我们总是会以结果和成败来论英雄，而不去审视在当时的情况下是不是做了正确的决定。要知道才能和运气这两个东西，其实是互相交织在一起的，很难分得开，再好的才能和决定，也可能因为运气而失败，我们只能尽量减少风险，但不可能预知结果。
+
+
 ## 2017-11-24 《大西洋月刊》| 《滚石》杂志的兴衰
 History is not what happened, but what remains when everything else is forgotten.
 历史，不是发生了什么，而是当所有事被遗忘的时候，留存下来的东西。
