--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,11 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-12-31 绝处逢生的改变
+故事：海伊镇，书与文化的王国
+所有的热情都是盲目的，除非有知识；所有的知识都是无用的，除非有付出；所有的付出都是空虚的，除非有爱。 
+
+
 ## 2017-09-05 《蒙娜丽莎》案外案
 好的艺术家抄袭，伟大的艺术家偷窃。
 
