--- a/note/...column_精英日课_第二季.md
+++ b/note/...column_精英日课_第二季.md
@@ -1,8 +1,61 @@
 # 精英日课·第二季
 2017-11-01
 
-
 --------------------------------------------------------------------------------
+
+
+## 2017-12-26 《不充分均衡》4：怎样用知识和世界相处
+只有当局势不明朗，没有人告诉你该怎么办，错误的判断会导致不良后果的时候，你因为有知识而敢于拿一个主意，这才算是真有知识。
+
+
+## 2017-12-18 《不充分均衡》1：“有效市场”和做大事的机会
+什么叫“有效市场”呢？经济学家的定义很简单，那就是价格完全由供给和需求的平衡决定。凡是想买这个东西的人都能轻易买到，凡是想卖这个东西的人都能轻易卖出，这就是有效市场。 如果需要一定的“资格”才能买卖，或者出现有价无市、有市无价的情况，那就不叫有效市场。
+
+
+## 2017-12-15 你想让儿童读的和儿童想读的
+但是请注意，“课外书”这个概念本来就不应该存在。一切真正的“书”都是课外书！“课内的”那叫“课本”！
+现在有很多人在朋友圈晒孩子弹钢琴练体育，很少有人晒孩子读书，殊不知读书才是真功夫。 
+阅读的本质，是探索一个未知的世界。我们身边日常接触的世界实在是太平淡了，只有读书才能接触到远方更大的天地。这个探索的过程应该是个人化的，在好奇心的驱动下越走越远。理想的局面是孩子告诉你他想读什么书让你买，而不是你告诉孩子他应该读什么书。
+
+
+## 2017-12-07 敢不敢做个复杂的人
+所谓个人成长，有些是知识和技能的完善，有些是性格的磨炼，但我觉得还有一个维度，叫做“变复杂”。
+
+流程是简单的，权力是复杂的。 
+你得从按照规定流程做事，变成独立自主，根据自己的判断做事，甚至根据自己的判断让别人做事。
+
+原则性是简单的，灵活性是复杂的。 
+理念都是好理念，原则都是好原则，但是面对一件具体的事情，各种原则和理念往往互相冲突，你能不能灵活处理。
+
+价值观是简单的，大目标是复杂的。 
+“不忘初心”是件很难的事，占领道德制高点最容易，大事业都是各种妥协和取舍的结果。
+
+理论模型是简单的，真实世界是复杂的。 
+三流知识分子眼里只有价值观和道德制高点，二流知识分子眼里有理论模型，只有第一流的知识分子才知道真实世界比理论模型复杂得多。
+
+讨好观众是简单的，把事做成是复杂的。 
+奥巴马这样的政客喜欢讨好观众，凡事自己要留个清白，所以他们就不敢承担责任，他们为了不做坏事，就干脆不做事。其实但凡做成了大事的人，哪有不被人骂的。
+
+小人物是简单的，大人物是复杂的。 
+不管我们怎么包装，“说服力”的本质，是使用各种手段让别人按照你的意志行动 —— 是让别人听你的。说服力的能力越大，你要承担的责任就越大。
+
+说服力，是一个武器。是武器就不能滥用。
+
+如果你太过纠结于说服力道德不道德，你不适合使用说服力。如果你完全不纠结道德问题，觉得只要这个手段能赚钱拿来就用，你也不适合使用说服力。只有当你理解了世界的复杂性，宁可承担责任，知道如何*谨慎*使用说服力的时候，你才真正适合使用说服力。
+
+
+## 2017-12-06 《以大制胜》7：国手的“预说服”
+人们会忘记你说过什么，忘记你做过什么，但是永远都不会忘你带给他们的感情。
+
+
+## 2017-12-04 《以大制胜》5：视觉想象是第一说服力
+自己想象自己的成功，不会让你更成功 —— 但是如果你能让别人想象你的成功，他们就会帮你成功。 
+
+
+## 2017-12-02 答读者问「立功思维」和「混资历思维」
+每个人炒股的目的都是非常单纯的，就是为了赚钱 —— 这里面没有宗教、没有政治、没有意识形态，按理说大家应该像钻研数学题一样、心平气和地讨论股票。可是你到那些炒股论坛看看，人们对一只股票的前景判断充满了各种感情，看涨和看跌的人居然互相讥讽！只有认知失调才能解释这个现象。 
+
+君子不党。我们要做独立自主的人，不能戴着有色眼镜观察世界。正确的方法是本着贝叶斯定理的精神（我在《智识分子》一书中专门讲过这个定理和使用，我们第一季也多次提到），让观点随着事实发生改变，具体问题具体分析。你是你自己的主人，所有观点得为你服务、供你选择，你不是“弘扬”任何“理念”的士兵。 
 
 
 ## 2017-11-29 《以大制胜》2：人心比事实重要
@@ -102,6 +155,10 @@ __思维导图__
 到底什么是“管理”呢？是权谋的较量吗？是摆弄员工的技巧吗？是带领团队冲锋吗？是站在场边发表激情动员讲话吗？不是。
 达里奥说，管理者不是哲学家、不是娱乐明星、不是亲自上阵干活的人、也不是艺术家 —— 管理者是工程师。
 乐队指挥。你并不演奏乐器，你把每个员工安排到适合他的位置上，自己起到一个协调的作用。
+
+想要真正做成事情，对个人来说关键是养成良好习惯，对公司来说关键是工具和流程。
+
+桥水留住员工的根本原因，还是在于理性。达里奥特别反感的一种管理方式是去“操纵（manipulate）”员工 —— 也就是诉诸感情，要么就是说好话哄，要么就是用坏话威胁，什么“交心”、“感动”，这些都是不对的。我的想法管理者和员工的健康关系应该是建立在共识的基础之上。把公司的原则、规则和逻辑都告诉员工，达成同步和共识，大家自然可以好好在一起做事。如果每个人都是真正理性的，那就根本不需要调动什么感情，也不用什么动员讲话。
 
 
 ## 2017-09-19 《你能做任何工作》3：机会网络
