Adds reading notes for the book - PCA

--- a/note/...book_穷查理宝典.md
+++ b/note/...book_穷查理宝典.md
@@ -1,2 +1,93 @@
 # 穷查理宝典
 2017-12-01
+
+--------------------------------------------------------------------------------
+
+
+## 第一章 查理·芒格传略
+最接近把一个人的生活重新过一遍的事情是回忆那种生活，并用文字记录下来，让这种回忆尽可能地长久。
+    -- 本杰明·富兰克林
+
+有一次，有位漂亮的女士坐在查理身边，问是什么因素促成了他的成功，而且不幸的是，这位女士非要查理用一个词来回答。他当时准备了一通几个小时的长篇大论，但是女士强迫他用一个词来概括，于是他说他很“理性”。
+
+西塞罗的政府观。他认为好的政府制度应该将有限选举民主制、寡头政治和临时君主制三种制度的某些方面综合起来，形成一套缜密的权力制衡系统，以便防止任何一个政客造成不可容忍的破坏。他背后的基本哲学观点是一种深刻而现实的对人本性的怀疑精神。
+
+在担任西西里的大法官之后，他找到古代最伟大的数学家阿基米德的坟茔，看到一片墓草萋萋的荒凉景象 —— 对数学和科学毫无兴趣的罗马文明的缺陷在此表露无遗。
+
+《论老年》最著名的段落当属下面这段了不起的总结：“晚年的最佳保护铠甲是一段在它之前被悉心度过的生活，一段被用于追求有益的知识、光荣的功绩和高尚的举止的生活；过着这种生活的人从青年时代就致力于提升他自己，而且将会在晚年收获它们产生的最幸福的果实；这不仅是因为有益的知识、光荣的功绩和高尚的举止将会陪伴他终生，甚至直到他生命的最后一刻，也会因为见证了正直的人生的良心和对过往美好功绩的回忆将会给灵魂带来无上的安慰。”
+
+生活的悲哀之处在于，我们总是老得太快，而又聪明得太慢。
+
+
+## 第二章 芒格的生活、学习和决策方法
+凡事往简单处想，往认真处行。
+
+哪年你没有破坏一个你最爱的观念，那么你这年就白过了。
+查理喜欢把人们的观念和方法比喻为“工具”。“如果有了更好的工具（观念或方法），那还有什么比用它来取代你较为没用的旧工具更好的呢？
+
+我们通过预测哪些人和公司会逆流游泳来强调可知因素。我们并不预测水流的波动。
+
+有性格的人才能拿着现金坐在那里什么事也不做。我能有今天，靠的是不去追逐平庸的机会。
+
+另外一个与挥棒太过频繁相对立的问题也同样有害于长期的结果：你发现一个“好球”，却无法用全部的资本去出击。
+
+投资原则检查清单：
+  - 风险 —— 所有投资评估应该从测量风险（尤其是信用的风险）开始
+    * 测算合适的安全边际
+    * 避免和道德品质有问题的人交易
+    * 坚持为预定的风险要求合适的补偿
+    * 永远记住通货膨胀和利率的风险
+    * 避免犯下大错；避免资本金持续亏损
+  - 独立 —— “唯有在童话中，皇帝才会被告知自己没穿衣服”
+    * 客观和理性的态度需要独立思考
+    * 记住，你是对是错，并不取决于别人同意你还是反对你 —— 惟一重要的是你的分析和判断是否正确
+    * 随大流只会让你往平均值靠近（只能获得中等的业绩）
+  - 准备 —— “惟一的获胜方法是工作、工作、工作、工作，并希望拥有一点洞察力。”
+    * 通过广泛的阅读把自己培养成一个终生自学者；培养好奇心，每天努力使自己聪明一点点
+    * 比求胜的意愿更重要的是做好准备的意愿
+    * 熟练地掌握各大学科的思维模型
+    * 如果你想要变得聪明，你必须不停地追问的问题是“为什么，为什么，为什么”
+  - 谦虚 —— 承认自己的无知是智慧的开端
+    * 只在自己明确界定的能力圈内行事
+    * 辨认和核查否定性的证据
+    * 抵制追求虚假的精确和错误的确定性的欲望
+    * 最重要的是，别愚弄你自己，而且要记住，你是最容易被自己愚弄的人
+  - 严格分析 —— 使用科学方法和有效的检查清单能够最大限度地减少错误和疏忽
+    * 区分价值和价格、过程和行动、财富和规模
+    * 记住浅显的好过掌握深奥的
+    * 成为一名商业分析家，而不是市场、宏观经济或者证券分析家
+    * 考虑总体的风险和效益，永远关注潜在的二阶效应和更高层次的影响
+    * 要朝前想、往后想 —— 反过来想，总是反过来想
+  - 配置 —— 正确地配置资本是投资者最重要的工作
+    * 记住，最好的用途总是由第二好的用途衡量出来的（机会成本）
+    * 好主意特别少 —— 当时机对你有利时，狠狠地下赌注吧（配置资本）
+    * 别“爱上”投资项目 —— 要依情况而定，照机会而行
+  - 耐心 —— 克制人类天生爱行动的偏好
+    * “复利是世界第八大奇迹”（爱因斯坦），不到必要的时候，别去打断它
+    * 避免多余的交易税和摩擦成本，永远别为了行动而行动
+    * 幸运来临时要保持头脑清醒
+    * 享受结果，也享受过程，因为你活在过程当中
+  - 决心 —— 当合适的时机出现时，要坚决地采取行动
+    * 当别人贪婪时，要害怕；当别人害怕时，要贪婪
+    * 机会来临的次数不多，所以当它来临时，抓住它
+    * 机会只眷顾有准备的人：投资就是这样的游戏
+  - 改变 —— 在生活中要学会改变和接受无法消除的复杂性
+    * 认识和适应你身边的世界的真实本质，别指望它来适应你
+    * 不断地挑战和主动地修正你“最爱的观念”
+    * 正视现实，即使你并不喜欢它 —— 尤其当你不喜欢它的时候
+  - 专注 —— 别把事情搞复杂，记住你原来要做的事
+    * 记住，声誉和正直是你最有价值的财产 —— 而且能够在瞬间化为乌有
+    * 避免妄自尊大和厌倦无聊的情绪
+    * 别因为过度关心细节而忽略了显而易见的东西
+    * 千万要排除不需要的信息：“千里之堤，毁于蚁穴”
+    * 直面你的大问题，别把它们藏起来
+
+人的任务不是去看清远处模糊的东西，而是去做好身边清楚的事情。
+
+我们偏向于把大量的钱投放在我们不用再另外作决策的地方。如果你因为一样东西的价值被低估而购买了它，那么当它的价格上涨到你预期的水平时，你就必须考虑把它卖掉。那很难。但是，如果你能购买几个伟大的公司，那么你就可以安坐下来啦。那是很好的事情。
+
+“能力会让你到达巅峰，但只有品德才能让你留在那里。”
+    -- 林肯
+
+“如果你说真话，你就不用记住你的谎言啦。” 我们不想搞得太复杂，所以总是说实话。
+本杰明·富兰克林是对的。他并没有说诚实是最好的道德品质，他说诚实是最好的策略。
