--- a/note/...2018_handy_notes.md
+++ b/note/...2018_handy_notes.md
@@ -5,6 +5,9 @@ date      : 2018-01-01
 
 
 ## 散记
+要成为一个优秀的作家，你不只得多写，也需要有衷心相信的信念。你不见得一定要具备复杂的道德哲学，但我想作家总会想尝试成为解答的一部分，去了解一点点人生，并把这些心得传下去。
+    -- 安妮·拉莫特《关于写作》
+
 感觉从那之后已经经过了漫长的岁月。“当初若是这么做的话” 或者 “如果换成现在的我就能做得更……” 之类的感伤，至今仍会不时地袭上我心头，感伤伴随着时间沉淀、浑浊，最终甚至遮蔽了时间的流动。在这段不断失去的日子中，如果说我还得到过一点什么，应该就是：人生总有那么一点来不及 —— 这么一种近乎于认命的教训吧。
     --《步履不停》
 
