Adds reading notes.

--- a/note/...column_产品思维30讲.md
+++ b/note/...column_产品思维30讲.md
@@ -19,7 +19,7 @@
      对自己存在感的定义。存在感之于人就好像生存之于动物一样，是触发情绪和推动行动的开关。一个人为什么奔波、焦虑、不安，机关算尽，上窜下跳？其实是因为他的存在感还没有被满足。一个人是为了不断地强化自己的存在感，在左冲右突里扩充了自己的能力圈。
 
 
-## 03. - 同理心训练：怎样理解愉悦与不爽
+## 03 - 同理心训练：怎样理解愉悦与不爽
 情绪就是底层的操作系统，有的人是iOS，有的人是安卓，大家版本号都还不太一样。
 你后天学习的知识技能，都是安装在底层操作系统上的，一个一个的App。
 
@@ -38,3 +38,14 @@
   1. 你可以量度，一个产品到位不到位；
   2. 你可以量度，你和一个人的关系；
   3. 你还可以看到，自己的天分和命运。
+
+
+## 04 - 同理心训练：怎样理解愤怒与恐惧
+本质上，愤怒是一种恐惧。
+焦虑，也是一种恐惧。它来自对恐惧的想象。因为是想象，所以无从逃避，所以是一种持续的恐惧。
+羞耻感，也是一种恐惧，它来自对社会评论的恐惧。
+
+一个人，如果在工作中，既没有愉悦，也没有恐惧，你基本上可以判断，他在这件事上，不会有什么成就。
+
+每个人的痛点都是他的恐惧，恐惧是痛点。
+所以医疗和教育，都是最大的市场，为什么？对生存的恐惧。
