Adds reading notes.

--- a/note/...book_unshakeable.md
+++ b/note/...book_unshakeable.md
@@ -2,6 +2,12 @@
 2018-01-02
 
 
-## Introduction
+## INTRODUCTION
 the purpose of business is to produce happiness, not to pile up money.
     -- B.C.Forbes
+
+
+## CH 1 - UNSHAKEABLE: Power and Peace of Mind in a World of Uncertainty
+## CH 2 - WINTER IS COMING...BUT WHEN?: These Seven Facts Will Free You from the Fear of Corrections and Crashes.
+What separates the money masters from the crowd is this ability to find a winning strategy and stick with it, so the odds are always strongly in their favor.
+The most important fact of all: the biggest danger isn't a correction or a bear market, it's being out of the market.
