Adds reading notes

--- a/note/...column_产品思维30讲.md
+++ b/note/...column_产品思维30讲.md
@@ -52,3 +52,39 @@
 
 
 ## 05 - 同理心训练：产品要顺应用户潜意识
+人为什么口是心非？用户研究到底要怎么做？
+因为人会基于自身所处的角色、所在的场景和个人的认知判断，选择性地说一些他觉得正确的话。
+
+一个好销售擅长的就是打破防御，因为任何一个人对销售人员一定是防御的。
+  - 销售人员要充分调度自己可以呈现的所有资源：自己的外貌、仪态，产品包装、价格折扣。
+  - 从用户意识层面，让用户认为自己获得了专业服务，而且赚了便宜。
+  - 从用户潜意识层面，再抓住用户心理上小小的满足或不安，打破用户的防御，说服用户，促成用户的选择。
+
+一个好产品经理，这是根本不让用户启动防御。一个产品如果引发用户启动意识，让用户思考，某种意义上，就是在推开用户。
+因为，意识即防御。
+
+
+烟草营销大师李克，他说包装的经验，最核心的一条就是 —— 规模感。
+明明是新品烟草，但是包装一定要让用户觉得很熟悉。
+熟悉的感觉就是潜意识里觉得安全的感觉，这样就不会触发防御。
+
+
+## 06 - 同理心训练：认清人的本性，理解角色化生存
+集体其实就是一堆角色。咱们从小的教育就是角色化教育，角色化教育的目的就是要训练你成为我需要的那个角色。
+当我们都被角色训练好，收敛自我，钻进一个同质化的壳里，我们就成为了一个集体。这群钻进了同质化壳里的人，就会呈现出来一种集体人格。
+
+张小龙认为：“好的用户体验，目标就是做到自然。”
+
+人其实只有在压力非常大的情况下，才会去扮演橘色。
+人是因为训练和压力才成为角色的，而集体就是角色的聚集。
+角色化才有效率，去角色化才有感情。
+
+
+## 07 - 同理心训练：自我与自律，哪一种更贴近产品精神
+做产品经理的人善于感知，能在已经有结论的地方建立新观点。而做其他管理的人更善于逻辑推理和总结归纳。
+
+自我的人更适合做产品经理，创造力是自我的延伸，而控制力是自律的延伸。
+创造力要求对自我有极深的体察和释放，但控制力是自律的体现，是社会化的产物，是对别人的体谅与迁就。
+
+靠愉悦驱动的人，往往自我。
+靠恐惧驱动的人，往往自律。
