Adds reading notes

--- a/note/...column_产品思维30讲.md
+++ b/note/...column_产品思维30讲.md
@@ -88,3 +88,21 @@
 
 靠愉悦驱动的人，往往自我。
 靠恐惧驱动的人，往往自律。
+
+
+## 08 - 机会判断：点线面体的战略选择
+你再努力工作，你还是一个点。一个月或一年的工资，只是一个点的努力成果。
+但是腾讯股票与北上广房子的收益，是因为这个点附着于一个快速崛起的经济体，这是一个线性周期的结果。
+对于做投资来说，你需要首先选择某个正在崛起的大型经济体，接着去找一个领域，投它的成长周期。
+
+普通人和富人的区别是什么？
+普通人勤恳努力、斤斤计较，他在意的是每一个当下的点，而任何一个点都不会产生过多的收益。
+如果要成为中产，至少要获得一次线性周期的收益。 比如持有腾讯股票10年，什么都不用干，10万变1000万。
+那么成为富人呢？就要借助面和体的崛起。
+
+当你想做一个产品的时候，入手只能是一个点。
+但你要想清楚，它附着在哪个面上？这个面在和谁竞争，它能如何展开？这个面，是在哪个经济体上？这个经济体，是在快速崛起，还是沉沦？
+悲催的人生，就是在一个常态的面上，做一个勤奋的点。
+更悲催的人生，就是在一个看上去常态的面上，做一个勤奋的点，你每天都在想着未来，但其实这个面正在下沉。
+最悲催的人生，就是在一个看上去常态的面上，做一个勤奋的点，其实这个面附着的经济体正在下沉。
+如果一个人一生只能收到点状努力的计时收益，从来没有享受过一次，线性周期的成果回报，这就叫穷人勤奋的一生。
