Adds reading notes for the book - Unshakeable.

--- a/note/...book_unshakeable.md
+++ b/note/...book_unshakeable.md
@@ -11,3 +11,8 @@ the purpose of business is to produce happiness, not to pile up money.
 ## CH 2 - WINTER IS COMING...BUT WHEN?: These Seven Facts Will Free You from the Fear of Corrections and Crashes.
 What separates the money masters from the crowd is this ability to find a winning strategy and stick with it, so the odds are always strongly in their favor.
 The most important fact of all: the biggest danger isn't a correction or a bear market, it's being out of the market.
+
+### Freedom Fact 1: On Average, Corrections Have Occurred About Once a Year Since 1900
+### Freedom Fact 2: Less Than 20% of All Corrections Turn Into a Bear Market
+### Freedom Fact 3: Nodoby Can Predict Consistently Whether the Market Will Rise or Fall
+### Freedom Fact 4: The Stock Market Rises Over Time Despite Many Short-Term Setbacks
