Adds reading notes.

--- a/note/...2018_handy_notes.md
+++ b/note/...2018_handy_notes.md
@@ -5,6 +5,9 @@ date      : 2018-01-01
 
 
 ## 散记
+故善战者，求之于势，不责于人，故能择人而任势。任势者，其战人也，如转木石；木石之性：安则静，危则动，方则止，圆则行。故善战人之势，如转圆石于千仞之山者，势也。
+    -- 《孙子兵法·势篇》
+
 要成为一个优秀的作家，你不只得多写，也需要有衷心相信的信念。你不见得一定要具备复杂的道德哲学，但我想作家总会想尝试成为解答的一部分，去了解一点点人生，并把这些心得传下去。
     -- 安妮·拉莫特《关于写作》
 
