--- a/note/...column_产品思维30讲.md
+++ b/note/...column_产品思维30讲.md
@@ -106,3 +106,21 @@
 更悲催的人生，就是在一个看上去常态的面上，做一个勤奋的点，你每天都在想着未来，但其实这个面正在下沉。
 最悲催的人生，就是在一个看上去常态的面上，做一个勤奋的点，其实这个面附着的经济体正在下沉。
 如果一个人一生只能收到点状努力的计时收益，从来没有享受过一次，线性周期的成果回报，这就叫穷人勤奋的一生。
+
+
+## 09 - 机会判断：怎样找到有势能的趋势
+如果是长期关系，两个人认识相处的目的是缔结婚姻，成为长期合作、伴侣关系，那么就应该平淡处理。
+为什么？因为每个人现在呈现的样子，其实都是自己过往所有经历的累加。
+有句话说：“你的样子里，有你爱过的人，走过的路，看过的风景，读过的书。”
+
+如果你追求的是长期关系，就不能基于自己最闪耀的点去缔结关系。
+长期关系里，没有人做得到。你平平常常拿出来的样子，就是你真实的样子。这才是你可以稳定提供的样子，才是可预期的样子。
+从这个稳定的点开始，作为一段长期关系的发端，有可能才是靠谱的。
+
+任何一个点都有它的来路，都有使它成为 “今天” 这个点的线、面、体。
+
+风口周边，必然VC成群。
+
+今天能跟着你干活的，都是你能得到的最好的员工。
+每一个人，就只是一个当下的 “点”，资源都很有限。一个 “点”，你再抱怨，再压榨，也就只有一个 “点” 的资源而已。
+反过来你要想，大家把自己最好的 “点” 都给了你。在一个时间周期之后，你会回报给大家什么样的线性收益呢？
