Adds reading notes.

--- a/note/...column_产品思维30讲.md
+++ b/note/...column_产品思维30讲.md
@@ -124,3 +124,12 @@
 今天能跟着你干活的，都是你能得到的最好的员工。
 每一个人，就只是一个当下的 “点”，资源都很有限。一个 “点”，你再抱怨，再压榨，也就只有一个 “点” 的资源而已。
 反过来你要想，大家把自己最好的 “点” 都给了你。在一个时间周期之后，你会回报给大家什么样的线性收益呢？
+
+
+## 10 - 机会判断：痛点、痒点、爽点都是产品机会
+痛点是恐惧。
+爽点是即时满足，有需求还能被即时满足，这就是爽。
+痒点是满足虚拟自我。
+
+自我实现其实是一条漫长而痛苦的路，人的本性是懒惰的。
+你看到一个人展现出了勤奋、规整、自律，其实这是被一系列的恐惧、集体人格、潜意识压迫，才会呈现出的样子。
