Adds reading notes.

--- a/note/...column_产品思维30讲.md
+++ b/note/...column_产品思维30讲.md
@@ -133,3 +133,29 @@
 
 自我实现其实是一条漫长而痛苦的路，人的本性是懒惰的。
 你看到一个人展现出了勤奋、规整、自律，其实这是被一系列的恐惧、集体人格、潜意识压迫，才会呈现出的样子。
+
+
+## 11 - 机会判断：两套经典的用户画像
+__第一套用户画像：羊群与草地__  
+日本的剑圣宫本武藏，有一本书叫《五轮书》。他说： “即使面对千军万马，你要斩杀的其实只有你对面的一人。”
+第一只羊是最关键的角色。
+你找到了这个用户，他可以在你这里得到即时满足，玩得开心，那么针对这只羊，针对这个用户的同类用户去做推广，你的产品就可以被快速地推开。
+
+第二个关键角色是头羊。
+什么叫头羊？比如说，论坛的版主，YY公会的老大，微博的大V，重度用户，淘宝的店主，这些都是头羊
+当你的草地上出现了头羊，头羊开始自己管羊群的时候，这代表着什么？其实这就代表了自组织的开始，你开始拥有了网络效应。
+
+__第二套用户画像：大明、笨笨和小闲__  
+男人买衬衫或手机就是大明，对自己的需求非常了解和清晰。
+大明用户要干的事情就是两件：一、搜索自己要的；二、比价格
+
+京东其实就是定位于服务大明的，所以标准品的竞争几乎都是京东赢。为什么？
+现在一些B2C品类暂时还有机会，其实是京东的火力还没有扩展到那里。
+标准品的电商，只要是京东来做，根本不需要精细化的运营就能够压倒其他的商家，为什么？因为大明用户要的就是价格和效率。
+
+笨笨用户的特征是什么？我有大概的需求，但是还没有那么明确。
+女人出门买裙子，可能会逛十家店看了200条裙子，最后买了一顶帽子。
+每天晚上有2000万女生在淘宝上逛，什么也不买，就是逛。
+
+小闲的特征是什么？我没有消费需求，我就是来打发时间的。
+一个人到这是来打发时间的，如果你突然让他买东西，他会觉得心理建设没做好，他没有这个预期。
