Adds reading notes.

--- a/note/...column_产品思维30讲.md
+++ b/note/...column_产品思维30讲.md
@@ -159,3 +159,13 @@ __第二套用户画像：大明、笨笨和小闲__
 
 小闲的特征是什么？我没有消费需求，我就是来打发时间的。
 一个人到这是来打发时间的，如果你突然让他买东西，他会觉得心理建设没做好，他没有这个预期。
+
+
+## 12 - 机会判断：设计产品时要包括产品的场景
+场景到底怎么定义？要把场景拆开，场和景。
+“场”是时间和空间的概念，一个场就是时间加空间。用户可以在这个空间里停留和消费
+“景”是什么意思？景就是情景和互动。当用户停留在这个空间的时间里，要有情景和互动让用户的情绪触发，并且裹挟用户的意见，这就是场景。
+
+很多时候，你以为你是在消费产品，其实你是在消费场景。
+场景的核心是在空间加时间的点上触发别人的情绪。
+其实人所有的理智和意识都是把人往回拉的，而所有的情绪是在推动人的行动。
