Adds reading notes.

--- a/note/...column_产品思维30讲.md
+++ b/note/...column_产品思维30讲.md
@@ -169,3 +169,12 @@ __第二套用户画像：大明、笨笨和小闲__
 很多时候，你以为你是在消费产品，其实你是在消费场景。
 场景的核心是在空间加时间的点上触发别人的情绪。
 其实人所有的理智和意识都是把人往回拉的，而所有的情绪是在推动人的行动。
+
+
+## 13 - 系统能力：怎样用系统能力给人提供确定性
+当你说你要做一个产品，你需要的是建设一套系统能力。 就好像你想拥有好的身材，就必须得有控制饮食和保持运动的系统能力一样。
+如果大家总是在谈产品，会很容易以产品经理为中心，就想着要做一个产品来改变世界。但是如果出发点是提供一个服务，就会以用户获得和用户满足为中心来做设计。
+
+为什么确定性这么重要？我们都是有感觉的，人生如此不确定，所以当你看到有一个东西非常确定的时候，是让人留恋的。
+不确定的东西是没有办法让你投入时间或者持续依赖的。
+持续地提供用户可以依赖的确定性，这个是关键。
