Adds reading notes for columns.

--- a/note/...column_5分钟商学院_实战.md
+++ b/note/...column_5分钟商学院_实战.md
@@ -5,5 +5,9 @@
 --------------------------------------------------------------------------------
 
 
+## 2018-01-11 公关产品：一双你都未必没见过的筷子，是如何创造品牌价值的？
+并非每一款产品生产出来的目的，都是最大的销量、最大的收入，或者最大的利润。有一些产品来到这个世界上，仅仅是为了“秀”，秀你的科技实力、创意能力、品味水准，或者工艺水平。这些产品就叫做：公关产品。
+
+
 ## 2017-10-19 反射效应：越有钱越不肯冒险，怎么办？
 处于收益状态时，因为“确定效应”，人们更加厌恶风险，喜欢“见好就收”；处于损失状态时，因为“反射效应”，人们更加偏好风险，倾向“赌一把”。同一个人的风险偏好，在不同的状态下，其实是不一样的。
