--- a/note/...column_精英日课_第二季.md
+++ b/note/...column_精英日课_第二季.md
@@ -4,6 +4,38 @@
 --------------------------------------------------------------------------------
 
 
+## 2018-01-18 《穿越平行宇宙》2:为什么世界是数学的
+数学王国，无需“为什么”，就存在。宇宙，只不过是数学王国中某些数学结构的物理实体而已。
+
+  1. 有一个永远不变的数学王国。
+  2. 每一个数学结构，都对应一个物理实体。
+  3. 无数个数学结构，就对应着无数个数学宇宙。
+  4. 数学宇宙的特点就是，除了数学就没有别的东西。
+  5. 并不是所有数学宇宙里都适合生命生存。
+  6. 那些不适合生命生存的数学宇宙，也都存在。
+  7. 每一个数学上合理的可能性都会发生、都发生过、而且都发生过无数次。
+  8. 我们，就是数学的一部分。
+
+
+## 2018-01-11 不想让别人知道我知道的知识
+心理学家提出了一个概念，叫做“视觉统治比（Visual Dominance Ratio）”
+视觉统治比 = 你说话的时候注视对方的时间% / 对方说话的时候你注视对方的时间%
+视觉统治比，揭示了你心目中跟对方相对地位的高低。面对地位比自己低的人，视觉统治比会在1左右。而军队里下级面对上级，视觉统治比是0.6。1982年那篇论文说，心理系大一新生面对一个已经被著名医学院录取的大四学长，视觉统治比是0.59。
+
+
+## 2018-01-03 给人一个不抓你的理由
+社会规范，是人类社会防止恶性竞争的伟大发明。很多动物都有社会等级，黑猩猩甚至有政治，但是只有人类有社会规范。
+
+
+## 2018-01-02 负能量竞争
+如果一棵红杉木周围都是很低的物种，它根本没必要长那么高。它应该把能量用来多结果实，繁殖更多的后代，好让自己的物种扩张。红杉木之所以长这么高，是因为每棵红杉木的周围，也是红杉木。
+社会地位是个很不好意思的话题，我们都假装不在意，我们喜欢说人人平等。事实是有人群就有地位，每个人都知道社会地位是存在的，而且每个人都知道自己处于什么位置。
+
+那理毛时间和什么有关系呢？和猩猩族群的社交圈大小有关。社交圈越大，用在理毛上的时间就越长。理毛，其实是社交行为。允许对方给自己理毛，这就是把后背暴露给对方，这个动作代表信任。
+如果两只猩猩经常互相理毛，它们就会经常一起用食，它们会允许彼此进入自己的安全空间，它们打仗的时候会联手。
+这才是政治。政治的关键特征，是“联盟”。
+
+
 ## 2017-12-26 《不充分均衡》4：怎样用知识和世界相处
 只有当局势不明朗，没有人告诉你该怎么办，错误的判断会导致不良后果的时候，你因为有知识而敢于拿一个主意，这才算是真有知识。
 
