Adds reading notes for the column - PM.

--- a/note/...column_产品思维30讲.md
+++ b/note/...column_产品思维30讲.md
@@ -178,3 +178,14 @@ __第二套用户画像：大明、笨笨和小闲__
 为什么确定性这么重要？我们都是有感觉的，人生如此不确定，所以当你看到有一个东西非常确定的时候，是让人留恋的。
 不确定的东西是没有办法让你投入时间或者持续依赖的。
 持续地提供用户可以依赖的确定性，这个是关键。
+
+
+## 14 - 系统能力：系统效率 - 小米的效率革命
+做产品是建设一套系统能力，提供并保障确定性，而效率则是这个系统能力的一个核心指标。
+雷军说过：“互联网思维里最关键的是两个点：第一是用户体验，第二是效率。”
+他还说过：“小米真正的护城河就是效率，而小米真正要做的就是效率革命。”
+
+小米打OPPO和vivo，看上去是手机的产品战争，但实际上背后是它们的效率之争。
+当你决定要做一个产品，准备搭建自己的系统能力时，你先问自己一句“我应该从哪个点来建立我系统性的效率优势？” 因为没有效率优势，这个系统是一个没有竞争力的系统。
+
+企业的存在就是社会效率分工的产物，天下武功唯快不破。
